Bug 367926 - Maximum number of background parser threads not saved
Summary: Maximum number of background parser threads not saved
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-28 14:46 UTC by tony.wasserka
Modified: 2016-09-05 14:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tony.wasserka 2016-08-28 14:46:59 UTC
When I lower the maximum number of threads to use for background parsing in the KDevelop settings and then restart KDevelop, it looks like the value hasn't actually been saved (the old value is shown instead of the one I changed it to before).

Reproducible: Always

Steps to Reproduce:
1. Start KDevelop, open the background parser settings
2. Lower the maximum number of background parser threads (in my case, it's set to 4 by default and I change it to 2)
3. Close KDevelop and start it again
4. Open the background parser settings and check the maximum number of background parser threads

Actual Results:  
The default value is shown

Expected Results:  
The value I just entered in the previous KDevelop session should be shown

Of course, other settings can be changed properly on my setup, including other background parser related settings.
Comment 1 vaxoji 2016-09-03 10:07:29 UTC
Same here, Arch Linux, almost impossible to work on my notebook with 4GB RAM, goes into swap pretty fast or just slow. Can I change it some other way?
Comment 2 Milian Wolff 2016-09-05 14:17:57 UTC
Git commit 265b519e919baa4c8a83e97b44e6c786fc18b8f8 by Milian Wolff.
Committed on 05/09/2016 at 14:17.
Pushed by mwolff into branch '5.0'.

Save background parser settings to config

M  +4    -0    shell/settings/bgpreferences.cpp

http://commits.kde.org/kdevplatform/265b519e919baa4c8a83e97b44e6c786fc18b8f8