Save background parser settings to config

BUG: 367926